--- a/nimbus-ui/nimbusui/src/app/components/platform/grid/table.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/grid/table.component.html
@@ -121,7 +121,7 @@
 
                                     <ng-template 
                                     [ngIf]="gridMode == 'edit' && 
-                                    TableComponentConstants.allowedInlineEditNmInputComponents.includes(col.uiStyles.attributes.alias)
+                                    TableComponentConstants.componentsEditableAsText.includes(col.uiStyles.attributes.alias)
                                     && gridModeRow == rowData.elemId">
                                         <nm-input  
                                         [nmValidator]="getViewParamInEditRow(col, rowData['elemId'])"
@@ -133,10 +133,16 @@
 
 
                                         <nm-comboBox 
-                                        *ngIf="gridMode == 'edit' && col?.uiStyles?.attributes?.alias == componentTypes.comboBox.toString() && gridModeRow == rowData.elemId" 
+                                        *ngIf="gridMode == 'edit' && gridModeRow == rowData.elemId && col?.uiStyles?.attributes?.alias == componentTypes.comboBox.toString()" 
                                         [hideLabel]=true
                                         [element]="getViewParamInEditRow(col, rowData['elemId'])" 
                                         [(ngModel)]="rowData[col.code]" ></nm-comboBox>
+
+                                        <nm-input-calendar 
+                                        *ngIf="gridMode == 'edit' && gridModeRow == rowData.elemId && col?.uiStyles?.attributes?.type == componentTypes.calendar.toString()" 
+                                        [hideLabel]=true
+                                        [element]="getViewParamInEditRow(col, rowData['elemId'])" 
+                                        [(ngModel)]="rowData[col.code]" ></nm-input-calendar>
 
 
                                         <div *ngFor="let error of getAddValErr(col.code)">
