--- a/nimbus-ui/nimbusui/src/app/components/platform/tree/treedemo.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/tree/treedemo.html
@@ -1,3 +1,5 @@
-    <h3>Departments</h3>
-    <p-tree [value]="treedata" selectionMode="checkbox" [(selection)]="selectedFiles2"></p-tree>
+    <h3>Departments</h3> <button (click)="postSelectedValues($event);">
+        <i class="fa fa-times"></i>
+    </button>
+    <p-tree [value]="treedata" selectionMode="checkbox" [(selection)]="selectedFiles2" ></p-tree>
     <div>Selected Nodes: {{selectedFiles2}}</div>
