--- a/nimbus-ui/nimbusui/src/app/components/platform/tree/treedemo.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/tree/treedemo.html
@@ -1,4 +1,4 @@
-    <h3>Departments</h3> <button (click)="postSelectedValues($event);">
+    <h3>Departments</h3> <button (click)="postSelectedValues();">
         <i class="fa fa-times"></i>
     </button>
     <p-tree [value]="treedata" selectionMode="checkbox" [(selection)]="selectedFiles2" ></p-tree>
