--- a/nimbus-ui/nimbusui/src/app/components/platform/tree/tree.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/tree/tree.component.html
@@ -1,12 +1,18 @@
     
-  <nm-input-label
-     *ngIf="!isLabelEmpty && !this.hideLabel"
-     [element]="element"
-     [for]="element.config?.code"
-     [required]="requiredCss"
-   >
-   </nm-input-label>
+ <div class="row-div">
+  <div>
+    <nm-input-label
+      *ngIf="!isLabelEmpty && !this.hideLabel"
+      [element]="element"
+      [for]="element.config?.code"
+     [required]="requiredCss">
+    </nm-input-label>
+  </div> 
+  <div>
     <button (click)="postSelectedValues();">
-        <i class="{{element.config.uiStyles.attributes.imgSrc}}"></i>
+      <i class="{{element.config.uiStyles.attributes.imgSrc}}"></i>
     </button>
-    <p-tree #nbtree [value]="treedata" selectionMode="checkbox" [(selection)]="selectedFields" ></p-tree>
+  </div>
+</div>
+ 
+<p-tree #nbtree [value]="treedata" selectionMode="checkbox" [(selection)]="selectedFields" ></p-tree>
