--- a/nimbus-ui/nimbusui/src/app/components/platform/tree/tree.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/tree/tree.component.html
@@ -9,9 +9,9 @@
     </nm-input-label>
   </div> 
   <div>
-    <button (click)="postSelectedValues();">
+    <!-- <button (click)="postSelectedValues();">
       <i class="{{element.config.uiStyles.attributes.imgSrc}}"></i>
-    </button>
+    </button> -->
   </div>
 </div>
  
