--- a/nimbus-ui/nimbusui/src/app/components/platform/grid/table.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/grid/table.component.html
@@ -215,11 +215,12 @@
         </ng-template>
 
         <ng-template pTemplate="footer" *ngIf="element.config?.uiStyles?.attributes?.postButton">
-            <div class="buttonGroup left">
-                <button (click)="postGridData(this)" type="button" class="btn btn-secondary post-btn">
-                    {{element.config.uiStyles.attributes.postButtonLabel}}
-                </button>
-            </div>
+          
         </ng-template>
     </p-table>
+    <div class="buttonGroup right">
+        <button (click)="postGridData(this)" type="button" class="btn btn-secondary post-btn">
+            {{element.config.uiStyles.attributes.postButtonLabel}}
+        </button>
+    </div>
 </div>
