--- a/nimbus-ui/nimbusui/src/app/components/platform/card/card-details.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/card/card-details.component.html
@@ -26,8 +26,8 @@
                             <nm-card-details-field id="{{field?.config?.code}}" [element]="field" [(value)]="field.leafState" [ngClass]="field.config.uiStyles.attributes.cssClass" [hidden]="!field.visible"></nm-card-details-field>
                         </ng-template>
                          <!-- TImer-->
-                        <ng-template [ngIf]="element.alias == componentTypes.timer.toString()">
-                            <nm-timer id="{{element.config?.code}}" [element]="element"></nm-timer>
+                        <ng-template [ngIf]="field.config?.uiStyles?.attributes?.alias == componentTypes.timer.toString()">
+                            <nm-timer id="{{field.config?.code}}" [element]="field"></nm-timer>
                         </ng-template>
                     </span>
                 </ng-template>
@@ -60,8 +60,8 @@
                             </div>
                         </ng-template>
                         <!-- TImer-->
-                        <ng-template [ngIf]="element.alias == componentTypes.timer.toString()">
-                            <nm-timer id="{{element.config?.code}}" [element]="element"></nm-timer>
+                        <ng-template [ngIf]="field.config?.uiStyles?.attributes?.alias == componentTypes.timer.toString()">
+                            <nm-timer id="{{field.config?.code}}" [element]="field"></nm-timer>
                         </ng-template>
                         
                     </span>
