Add support for selector in global header

--- a/nimbus-ui/nimbusui/src/app/components/platform/header/header-global.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/header/header-global.component.html
@@ -61,6 +61,10 @@
                 </div>
             </div>
         </div> -->
-
+    </div>
+    <div class="col-sm-3 d-none d-sm-inline-block p-0 ml-3 mt-1 ">
+        <div class="productName  d-inline-block">
+            <nm-comboBox id="{{branding.selector.config?.code}}" [element]="branding.selector" [(ngModel)]="branding.selector.leafState"></nm-comboBox>
+        </div>
     </div>
 </div>
